Updates codes for Broadway.

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <div class="header">
       <h1>Broadway Design</h1>
       <div class="nav">
-        <div class="home"><a href="./index.html">Home</a></div>
-        <div class="process"><a href="#ourprocess">Process</a></div>
-        <div class="work"><a href="#categories">Work</a></div>
-        <div class="team"><a href="#categories">Team</a></div>
-        <div class="contact"></div>
-        <a href="#categories">Contact</a>
+        <ul>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="#ourprocess">Process</a></li>
+        <li><a href="#categories">Work</a></li>
+        <li><a href="#categories">Team</a></li>
+        <li><a href="#categories">Contact</a></li>
+      </ul>
       </div>
     </div>
     <div id="ourprocess">
